# safety-grounded-agent

./: .env.example  .gitignore  .gitleaks.toml  README.md  alembic.ini  pyproject.toml
alembic/: env.py
data/: aliases.json
docs/: project-design.md  project-walkthrough.md  sme-productization-roadmap.md
scripts/: check_distribution_contents.py  check_nodeid_baseline.py  check_phase14_formal_staging.py  check_pytest_junit.py  check_repository_hygiene.py  create_phase14_baseline_evidence.py  create_phase14_candidate_manifest.py  create_phase14_closeout.py  create_phase14_evidence_report.py  create_phase14_job_payload.py  create_phase14_runtime_attestation.py  generate_phase14_policy_fixtures.py  generate_portfolio_examples.py  postgres_backup_restore_drill.py  run_gitleaks_functional_gate.py  run_with_postgres_test_env.py  verify_phase14_formal_artifact.py  verify_phase14_github_trust.py  verify_phase14_repository_baseline.py
tests/: __init__.py  conftest.py  fakes.py  test_agent.py  test_api.py  test_api_concurrency_isolation.py  test_application_service.py  test_cli.py  test_dashscope_client.py  test_database.py  test_distribution_contents.py  test_durable_application_service.py  test_evaluation.py  test_execution_persistence_contract.py  test_gitleaks_gate.py  test_idempotency_contracts.py  test_idempotent_durable_service.py  test_intent_router.py  test_llm.py  test_log_redaction.py  test_m14e_http_wiring.py  test_model_registry.py  test_models.py  test_operational_contracts.py  test_orchestration.py  test_orchestration_concurrency.py  test_persistence_mappers.py  test_persistence_operations.py  test_phase14_artifact.py  test_phase14_baseline.py  test_policy.py  (+26 more)
(+225 files in other folders)
